--- a/IRIS_Species_Classification_Case_1.ipynb
+++ b/IRIS_Species_Classification_Case_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cbbb481b",
+   "id": "c60f4334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "05031bc9",
+   "id": "c29d26b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b665c0",
+   "id": "f46ee0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8d9af18a",
+   "id": "d3ac9876",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba23a8d1",
+   "id": "90b84fe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6e6ebd0e",
+   "id": "afea1256",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e47afebf",
+   "id": "db0af761",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "34ec4862",
+   "id": "2daa4e58",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5bab2d7e",
+   "id": "53057eae",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "76de0a71",
+   "id": "85bda020",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a707fbd",
+   "id": "879bfe37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "691d2bc3",
+   "id": "26d09771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c09a49",
+   "id": "e6b42d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b2bbc006",
+   "id": "4d3116a5",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a4438ed",
+   "id": "ba6290a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d7b83c89",
+   "id": "24e6a18e",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6322c19c",
+   "id": "b1f21f3c",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "3960569c",
+   "id": "8ae57751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "b5184a13",
+   "id": "48104dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "69604237",
+   "id": "0d95be95",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "637d5bb1",
+   "id": "ffad19fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "7745b2c5",
+   "id": "71d36d89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9d3a3651",
+   "id": "aa93080c",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16f5fad",
+   "id": "5a22f1d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "439d6598",
+   "id": "204da05f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "63a529da",
+   "id": "06e3e56a",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd2c60f",
+   "id": "c9dc0ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "44fc4425",
+   "id": "9fff3850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "3c12616d",
+   "id": "6b166ee6",
    "metadata": {},
    "outputs": [
     {
@@ -1103,8 +1103,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1d8938af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#KNN classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "66b8f36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "#from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "47e74eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9333333333333333"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_model=KNeighborsClassifier(n_neighbors=10)\n",
+    "knn_model.fit(x_train, y_train)\n",
+    "knn_model.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e8a8ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 158,
-   "id": "f58347aa",
+   "id": "2ccae7b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,8 +1170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "97ec3603",
+   "execution_count": 165,
+   "id": "f1096cd7",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1181,8 @@
       "Random_Forest : 0.9\n",
       "SVM : 0.9666666666666667\n",
       "Decision_Tree : 0.9\n",
-      "Logistic_Regression : 0.9\n"
+      "Logistic_Regression : 0.9\n",
+      "KNN : 0.9\n"
      ]
     },
     {
@@ -1152,7 +1205,8 @@
     "    'Random_Forest' : RandomForestClassifier,\n",
     "    'SVM' : SVC,\n",
     "    'Decision_Tree' : DecisionTreeClassifier,\n",
-    "    'Logistic_Regression' : LogisticRegression\n",
+    "    'Logistic_Regression' : LogisticRegression,\n",
+    "    'KNN' : KNeighborsClassifier\n",
     "})\n",
     "for keys, data in models.items():\n",
     "    model=data()\n",
@@ -1161,8 +1215,283 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eeb8d8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In above we use just train,test method for train and test data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "93eab678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KFold(n_splits=3, random_state=None, shuffle=False)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "kf = KFold(n_splits=3)\n",
+    "kf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "c3d15c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "folds = StratifiedKFold(n_splits=3)\n",
+    "\n",
+    "scores_logistic = []\n",
+    "scores_svm = []\n",
+    "scores_rf = []\n",
+    "\n",
+    "\n",
+    "for train_index, test_index in folds.split(iris.data,iris.target):\n",
+    "    X_train, X_test, y_train, y_test = iris.data[train_index], iris.data[test_index], iris.target[train_index], iris.target[test_index]\n",
+    "    scores_logistic.append(get_score(LogisticRegression(solver='liblinear',multi_class='ovr'), X_train, X_test, y_train, y_test))  \n",
+    "    scores_svm.append(get_score(SVC(gamma='auto'), X_train, X_test, y_train, y_test))\n",
+    "    scores_rf.append(get_score(RandomForestClassifier(n_estimators=40), X_train, X_test, y_train, y_test))    \n",
+    "    \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "26630913",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.96, 0.96, 0.94]"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_logistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "7f6a34a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.98, 0.98, 0.96]"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "7728bdf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.98, 0.94, 0.96]"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "f77d410a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score(model, X_train, X_test, y_train, y_test):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    return model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "492afd85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model_params = {\n",
+    "    'svm': {\n",
+    "        'model': svm.SVC(gamma='auto'),\n",
+    "        'params' : {\n",
+    "            'C': [1,10,20],\n",
+    "            'kernel': ['rbf','linear']\n",
+    "        }  \n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestClassifier(),\n",
+    "        'params' : {\n",
+    "            'n_estimators': [1,5,10]\n",
+    "        }\n",
+    "    },\n",
+    "    'logistic_regression' : {\n",
+    "        'model': LogisticRegression(solver='liblinear',multi_class='auto'),\n",
+    "        'params': {\n",
+    "            'C': [1,5,10]\n",
+    "        }\n",
+    "    },\n",
+    "    'Decision_Tree': {\n",
+    "        'model': DecisionTreeClassifier(),\n",
+    "        'params' : {\n",
+    "            \n",
+    "        }  \n",
+    "    },\n",
+    "    'KNN': {\n",
+    "        'model': KNeighborsClassifier(),\n",
+    "        'params' : {\n",
+    "            \n",
+    "        }  \n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "20209674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>best_score</th>\n",
+       "      <th>best_params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>svm</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>{'n_estimators': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>{'C': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Decision_Tree</td>\n",
+       "      <td>0.953333</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>0.973333</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 model  best_score                best_params\n",
+       "0                  svm    0.980000  {'C': 1, 'kernel': 'rbf'}\n",
+       "1        random_forest    0.960000        {'n_estimators': 5}\n",
+       "2  logistic_regression    0.966667                   {'C': 5}\n",
+       "3        Decision_Tree    0.953333                         {}\n",
+       "4                  KNN    0.973333                         {}"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "\n",
+    "for model_name, mp in model_params.items():\n",
+    "    clf =  GridSearchCV(mp['model'], mp['params'], cv=5, return_train_score=False)\n",
+    "    clf.fit(x, y)\n",
+    "    scores.append({\n",
+    "        'model': model_name,\n",
+    "        'best_score': clf.best_score_,\n",
+    "        'best_params': clf.best_params_\n",
+    "    })\n",
+    "    \n",
+    "df = pd.DataFrame(scores,columns=['model','best_score','best_params'])\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "6061788d",
+   "id": "c352afe6",
    "metadata": {},
    "source": [
     "# # Summary--------------------------------------------------------------------------------------------"
@@ -1171,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ba65931",
+   "id": "089358a0",
    "metadata": {},
    "outputs": [],
    "source": [
